--- a/tenji.html
+++ b/tenji.html
@@ -1,69 +1,70 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
 <head>
+<meta charset="utf-8">
 <meta http-equiv="Content-Style-Type" content="text/css" />
 <meta http-equiv="Content-Script-Type" content="text/javascript" />
 <meta http-equiv="imagetoolbar" content="no" />
-<meta name="description" content="ˆê”Ê“W¦‚ÌĞ‰î‚Å‚·B" />
-<meta name="keywords" content="‰›ÛÕ,ƒXƒCƒ‰ƒ“Õ,‚è‚Z,‚‚" />
+<meta name="description" content="ä¸€èˆ¬å±•ç¤ºã®ç´¹ä»‹ã§ã™ã€‚" />
+<meta name="keywords" content="ç¿ å·’ç¥­,ã‚¹ã‚¤ãƒ©ãƒ³ç¥­,é«˜å´é«˜æ ¡,é«˜é«˜" />
 <link rel="stylesheet" href="css/common.css" type="text/css" />
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
-<title>‘æ62‰ñ‰›ÛÕ</title>
+<title>ç¬¬62å›ç¿ å·’ç¥­</title>
 </head>
 <body>
 <div id="top">
    <div id="header">
-      <h1><a href="index.html">‘æ62‰ñ‰›ÛÕ</a></h1>
+      <h1><a href="index.html">ç¬¬62å›ç¿ å·’ç¥­</a></h1>
       <div id="pr">
-        <p><h1>uNo Limit!v</h1></p>
+        <p><h1>ã€ŒNo Limit!ã€</h1></p>
       </div>
       <div id="menu">
          <ul>
-          <li><a href="index.html">ƒgƒbƒv</a></li>
-            <li><a href="timetable.html">ƒ^ƒCƒ€ƒe[ƒuƒ‹</a></li>
-            <li><a href="tenji.html">ˆê”Ê“W¦</a></li>
-            <li><a href="event_gym.html">ƒCƒxƒ“ƒgE‘ÌˆçŠÙs–</a></li>
-            <li><a href="goods.html">”Ì”„•¨</a></li>
-            <li><a href="mail.html">‚¨–â‚¢‡‚í‚¹</a></li>
-            <li><a href="access.html">ƒAƒNƒZƒX</a></li>
+          <li><a href="index.html">ãƒˆãƒƒãƒ—</a></li>
+            <li><a href="timetable.html">ã‚¿ã‚¤ãƒ ãƒ†ãƒ¼ãƒ–ãƒ«</a></li>
+            <li><a href="tenji.html">ä¸€èˆ¬å±•ç¤º</a></li>
+            <li><a href="event_gym.html">ã‚¤ãƒ™ãƒ³ãƒˆãƒ»ä½“è‚²é¤¨è¡Œäº‹</a></li>
+            <li><a href="goods.html">è²©å£²ç‰©</a></li>
+            <li><a href="mail.html">ãŠå•ã„åˆã‚ã›</a></li>
+            <li><a href="access.html">ã‚¢ã‚¯ã‚»ã‚¹</a></li>
          </ul>
       </div><!-- /#menu -->
    </div><!-- /#header -->
    <div id="contents">
       <div id="main">
 	 
-         <h2>ˆê”Ê“W¦</h2>
-		 <h3>ˆê”Ê“W¦</h3>
+         <h2>ä¸€èˆ¬å±•ç¤º</h2>
+		 <h3>ä¸€èˆ¬å±•ç¤º</h3>
          <p><img src="photo/tenji1.png" alt="" width="450" height="120"></p>
       </div><!-- /#main -->
       <div id="sub">
          
          <div class="section">
-            <h2>ˆê”Ê“W¦</h2>
+            <h2>ä¸€èˆ¬å±•ç¤º</h2>
             <ul>
-               <li><a href="tenji.html">ƒNƒ‰ƒX“W¦</a></li>
-               <li><a href="other.html">•”Šˆ“W¦E‚»‚Ì‘¼‚Ì“W¦</a></li>
+               <li><a href="tenji.html">ã‚¯ãƒ©ã‚¹å±•ç¤º</a></li>
+               <li><a href="other.html">éƒ¨æ´»å±•ç¤ºãƒ»ãã®ä»–ã®å±•ç¤º</a></li>
             </ul>
-			<p><a class="twitter-timeline"  href="https://twitter.com/suiranfes ; charset=utf-8"   data-widget-id="456071860656930816">@suiranfes ‚©‚ç‚ÌƒcƒC[ƒg</a>
+			<p><a class="twitter-timeline"  href="https://twitter.com/suiranfes ; charset=utf-8"   data-widget-id="456071860656930816">@suiranfes ã‹ã‚‰ã®ãƒ„ã‚¤ãƒ¼ãƒˆ</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></p>
 
          </div><!-- /.section -->
         
       </div><!-- sub -->
       <div id="pageTop">
-         <a href="#top">ƒy[ƒW‚Ìƒgƒbƒv‚Ö–ß‚é</a>
+         <a href="#top">ãƒšãƒ¼ã‚¸ã®ãƒˆãƒƒãƒ—ã¸æˆ»ã‚‹</a>
       </div><!-- /#pageTop -->
    </div><!-- /#contents -->
    <div id="footMenu">
       <ul>
-        <li><a href="index.html">ƒgƒbƒv</a></li>
-            <li><a href="timetable.html">ƒ^ƒCƒ€ƒe[ƒuƒ‹</a></li>
-            <li><a href="tenji.html">ˆê”Ê“W¦</a></li>
-            <li><a href="event_gym.html">ƒCƒxƒ“ƒgE‘ÌˆçŠÙs–</a></li>
-            <li><a href="goods.html">”Ì”„•¨</a></li>
-            <li><a href="mail.html">‚¨–â‚¢‡‚í‚¹</a></li>
-            <li><a href="access.html">ƒAƒNƒZƒX</a></li>
+        <li><a href="index.html">ãƒˆãƒƒãƒ—</a></li>
+            <li><a href="timetable.html">ã‚¿ã‚¤ãƒ ãƒ†ãƒ¼ãƒ–ãƒ«</a></li>
+            <li><a href="tenji.html">ä¸€èˆ¬å±•ç¤º</a></li>
+            <li><a href="event_gym.html">ã‚¤ãƒ™ãƒ³ãƒˆãƒ»ä½“è‚²é¤¨è¡Œäº‹</a></li>
+            <li><a href="goods.html">è²©å£²ç‰©</a></li>
+            <li><a href="mail.html">ãŠå•ã„åˆã‚ã›</a></li>
+            <li><a href="access.html">ã‚¢ã‚¯ã‚»ã‚¹</a></li>
       </ul>
    </div><!-- /#footerMenu -->
    <div id="footer">
